--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "pages:build": "npx @cloudflare/next-on-pages@1"
   },
   "dependencies": {
     "next": "14.2.5",
@@ -18,6 +19,7 @@
     "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.0.0",
     "@types/node": "^20.14.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
