--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ketqat",
   "version": "0.1.0",
-  "description": "The Home for Quantum Error Correction - An open-source platform for sharing decoders and connecting to quantum cloud providers.",
+  "description": "The Home for Quantum Computing - An open-source platform to connect with quantum cloud providers, share algorithms, and collaborate on quantum computing research.",
   "author": "KetQat Contributors",
   "license": "Apache-2.0",
   "repository": "github.com/username/ketqat",
